# fuel-nailgun-extension-converted-serializers

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  bindep.txt  conftest.py  groups  nailgun-test-settings.yaml  project.config  setup.cfg  test-requirements.txt  tox.ini
converted_serializers/: extension.py
converted_serializers/tests/: test_pipelines.py
specs/: fuel-nailgun-extension-converted-serializers.spec
